--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,14 @@
     <string name="text_hint_course_progress">
         Al &lt;font color=\'#777777\'&gt; &lt;b&gt;{pct}%&lt;/b&gt;&lt;/font&gt; del curso, tienes una nota de &lt;font color=\'#777777\'&gt; &lt;b&gt;{grade}&lt;/b&gt;&lt;/font&gt;
     </string>
-    
-    
+    <string name="text_concluded_evaluations">evaluaciones concluidas</string>
+    <string name="text_type">TIPO</string>
+    <string name="text_weight">PESO</string>
+    <string name="text_grade">NOTA</string>
+    <string name="format_weight">%1$,.1f%%</string>
+    <string name="text_final_assessment">NOTA FINAL</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
